bk_ida/gccida/c2/gen_split_959
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_959/src/insn-emit.c:8791:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_959/src/insn-emit.c:8792:30: error: use of undeclared identifier 'machine_mode'
operands[3] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[3]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_959/src/insn-emit.c:8793:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[4]); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_959/src/obj/insn-emit.o] Error 1
